--- a/styles/index.css
+++ b/styles/index.css
@@ -36,3 +36,7 @@
     display: none !important;
   }
 }
+
+.u-hideOverflow {
+  overflow: hidden;
+}
